--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,7 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "nirav@cloudjourney.in"
           echo foo >> bar.txt
+          echo ${{ secrets.GPG_PRIVATE_KEY }}
           git add .
           git commit -m "CI: Update Snapshots" -S || echo "No changes to commit"
           git push
